; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00crypto.c_rt2x00crypto_tx_insert_iv.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/rt2x00/extr_rt2x00crypto.c_rt2x00crypto_tx_insert_iv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i64 }
%struct.skb_frame_desc = type { i32, i32* }

@SKBDESC_IV_STRIPPED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rt2x00crypto_tx_insert_iv(%struct.sk_buff* %0, i32 %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.skb_frame_desc*, align 8
  %6 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %8 = call %struct.skb_frame_desc* @get_skb_frame_desc(%struct.sk_buff* %7)
  store %struct.skb_frame_desc* %8, %struct.skb_frame_desc** %5, align 8
  %9 = load %struct.skb_frame_desc*, %struct.skb_frame_desc** %5, align 8
  %10 = getelementptr inbounds %struct.skb_frame_desc, %struct.skb_frame_desc* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  %16 = xor i1 %15, true
  %17 = zext i1 %16 to i32
  %18 = mul nsw i32 %17, 4
  %19 = load %struct.skb_frame_desc*, %struct.skb_frame_desc** %5, align 8
  %20 = getelementptr inbounds %struct.skb_frame_desc, %struct.skb_frame_desc* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = getelementptr inbounds i32, i32* %21, i64 1
  %23 = load i32, i32* %22, align 4
  %24 = icmp ne i32 %23, 0
  %25 = xor i1 %24, true
  %26 = xor i1 %25, true
  %27 = zext i1 %26 to i32
  %28 = mul nsw i32 %27, 4
  %29 = add nsw i32 %18, %28
  store i32 %29, i32* %6, align 4
  %30 = load %struct.skb_frame_desc*, %struct.skb_frame_desc** %5, align 8
  %31 = getelementptr inbounds %struct.skb_frame_desc, %struct.skb_frame_desc* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = load i32, i32* @SKBDESC_IV_STRIPPED, align 4
  %34 = and i32 %32, %33
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %37, label %36

36:                                               ; preds = %2
  br label %69

37:                                               ; preds = %2
  %38 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @skb_push(%struct.sk_buff* %38, i32 %39)
  %41 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %42 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %41, i32 0, i32 0
  %43 = load i64, i64* %42, align 8
  %44 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %45 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = load i32, i32* %6, align 4
  %48 = zext i32 %47 to i64
  %49 = add nsw i64 %46, %48
  %50 = load i32, i32* %4, align 4
  %51 = call i32 @memmove(i64 %43, i64 %49, i32 %50)
  %52 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %53 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %52, i32 0, i32 0
  %54 = load i64, i64* %53, align 8
  %55 = load i32, i32* %4, align 4
  %56 = zext i32 %55 to i64
  %57 = add nsw i64 %54, %56
  %58 = load %struct.skb_frame_desc*, %struct.skb_frame_desc** %5, align 8
  %59 = getelementptr inbounds %struct.skb_frame_desc, %struct.skb_frame_desc* %58, i32 0, i32 1
  %60 = load i32*, i32** %59, align 8
  %61 = load i32, i32* %6, align 4
  %62 = call i32 @memcpy(i64 %57, i32* %60, i32 %61)
  %63 = load i32, i32* @SKBDESC_IV_STRIPPED, align 4
  %64 = xor i32 %63, -1
  %65 = load %struct.skb_frame_desc*, %struct.skb_frame_desc** %5, align 8
  %66 = getelementptr inbounds %struct.skb_frame_desc, %struct.skb_frame_desc* %65, i32 0, i32 0
  %67 = load i32, i32* %66, align 8
  %68 = and i32 %67, %64
  store i32 %68, i32* %66, align 8
  br label %69

69:                                               ; preds = %37, %36
  ret void
}

declare dso_local %struct.skb_frame_desc* @get_skb_frame_desc(%struct.sk_buff*) #1

declare dso_local i32 @skb_push(%struct.sk_buff*, i32) #1

declare dso_local i32 @memmove(i64, i64, i32) #1

declare dso_local i32 @memcpy(i64, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
